--- a/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Edit.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Edit.cshtml
@@ -5,82 +5,111 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Brewery</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Brewery_ID)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brewery_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brewery_Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brewery_Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brewery_Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brewery_Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brewery_Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brewery_Address, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brewery_Address, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brewery_Address, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brewery_City, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brewery_City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brewery_City, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brewery_State, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brewery_State, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brewery_State, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brewery_Zip, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brewery_Zip, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brewery_Zip, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Brewery_Rating, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Brewery_Rating, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Brewery_Rating, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+<section class="hero is-dark">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title name-font brand">
+                Edit @Html.DisplayFor(model => model.Brewery_Name) Details
+            </h1>
         </div>
     </div>
-}
+</section>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div class="container">
+    <nav class="breadcrumb" aria-label="breadcrumbs">
+        <ul>
+            <li>@Html.ActionLink("Back to List", "Index")</li>
+            <li class="is-active"><a href="#" aria-current="page">Edit</a></li>
+        </ul>
+    </nav>
+</div>
+
+<div class="columns is-centered">
+    <div class="column is-4">
+
+        <div class="card top-bot-space">
+            <header class="card-header">
+                <p class="card-header-title">
+                    Update Brewery Information
+                </p>
+            </header>
+            <div class="card-content">
+                <div class="content">
+
+                    <!-- EDIT BREWERY FORM-->
+                    <form>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.Brewery_ID)
+
+                        <div class="field">
+                            <label class="label">Brewery Name</label>
+                            <div class="control">
+                                @Html.EditorFor(model => model.Brewery_Name, new { htmlAttributes = new { @class = "input" } })
+                                @Html.ValidationMessageFor(model => model.Brewery_Name, "", new { @class = "help is-danger" })
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label">Brewery Description</label>
+                            <div class="control">
+                                @Html.EditorFor(model => model.Brewery_Description, new { htmlAttributes = new { @class = "input" } })
+                                @Html.ValidationMessageFor(model => model.Brewery_Description, "", new { @class = "help is-danger" })
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label">Brewery Address</label>
+                            <div class="control">
+                                @Html.EditorFor(model => model.Brewery_Address, new { htmlAttributes = new { @class = "input" } })
+                                @Html.ValidationMessageFor(model => model.Brewery_Address, "", new { @class = "help is-danger" })
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label">Brewery City</label>
+                            <div class="control">
+                                @Html.EditorFor(model => model.Brewery_City, new { htmlAttributes = new { @class = "input" } })
+                                @Html.ValidationMessageFor(model => model.Brewery_City, "", new { @class = "help is-danger" })
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label">Brewery State</label>
+                            <div class="control">
+                                @Html.EditorFor(model => model.Brewery_State, new { htmlAttributes = new { @class = "input" } })
+                                @Html.ValidationMessageFor(model => model.Brewery_State, "", new { @class = "help is-danger" })
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label">Brewery Zip</label>
+                            <div class="control">
+                                @Html.EditorFor(model => model.Brewery_Zip, new { htmlAttributes = new { @class = "input" } })
+                                @Html.ValidationMessageFor(model => model.Brewery_Zip, "", new { @class = "help is-danger" })
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <label class="label">Brewery Rating</label>
+                            <div class="control">
+                                @Html.EditorFor(model => model.Brewery_Rating, new { htmlAttributes = new { @class = "input" } })
+                                @Html.ValidationMessageFor(model => model.Brewery_Rating, "", new { @class = "help is-danger" })
+                            </div>
+                        </div>
+
+                        <div class="field is-grouped is-grouped-centered">
+                            <p class="control">
+                                <input type="submit" value="Save" class="button is-link" />
+                            </p>
+                        </div>
+
+                    </form>
+                    <!-- END EDIT BREWERY FORM -->
+
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
