--- a/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Home/About.cshtml
@@ -38,10 +38,9 @@
                         </figure>
                     </div>
                     <div class="card-content">
-                        <h2 class="title is-2 has-text-centered">Ian Arsenault</h2>
+                        <h2 class="title is-2 has-text-centered">Ian</h2>
                         <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Phasellus nec iaculis mauris.
+                           
                         </div>
                     </div>
                 </div>
@@ -54,27 +53,20 @@
                         </figure>
                     </div>
                     <div class="card-content">
-                        <h2 class="title is-2 has-text-centered">Jameson Arsenault</h2>
+                        <h2 class="title is-2 has-text-centered">Jameson</h2>
 
                         <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Phasellus nec iaculis mauris. 
+                         
                         </div>
                     </div>
                 </div>
             </div>
         </div>
    
-        <p>Lorem ipsum<sup><a>[1]</a></sup> dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub<sub>script</sub> works as well!</p>
-        <h2>Second level</h2>
-        <p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
-        <ul>
-            <li>Thing one</li>
-            <li>Thing two</li>
-            <li>Thing three</li>
-            <li>Thing four</li>
-        </ul>
-
-       </div>
-
+        <div class="columns is-centered top-bot-space">
+            <div class="column is-half">
+                <p>Lorem ipsum<sup><a>[1]</a></sup> dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub<sub>script</sub> works as well!</p>
+            </div>
+        </div>
+       
 </div>
