--- a/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Delete.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Delete.cshtml
@@ -5,61 +5,60 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Beers</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Brewery.Brewery_Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Brewery.Brewery_Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Beer_Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Beer_Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Beer_Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Beer_Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Beer_Rating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Beer_Rating)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ImageName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ImageName)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+<section class="hero is-dark">
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title name-font brand">
+                Delete 
+            </h1>
+            <h2 class="subtitle">
+                Are you sure you want to delete this?
+            </h2>
         </div>
-    }
+    </div>
+</section>
+
+<div class="container">
+    <nav class="breadcrumb" aria-label="breadcrumbs">
+        <ul>
+            <li>@Html.ActionLink("Back to List", "Index")</li>
+            <li class="is-active"><a href="#" aria-current="page">Delete Record</a></li>
+        </ul>
+    </nav>
+</div>
+
+
+
+<div class="columns is-centered">
+    <div class="column is-4">
+        <div class="card">
+            <header class="card-header">
+                <p class="card-header-title">
+                    @Html.DisplayFor(model => model.Beer_Name)
+                </p>
+            </header>
+            <div class="card-content">
+                <div class="content">
+                    <div class="title is-4">Rating: <span class="rating">@Html.DisplayFor(model => model.Beer_Rating)</span></div>
+                </div>
+                <div class="content">
+                    <div class="title is-4">Brewery: <span>@Html.DisplayFor(model => model.Brewery.Brewery_Name)</span></div>
+                </div>
+                <div class="content">
+                    <div class="title is-4">Description:</div>
+                    @Html.DisplayFor(model => model.Beer_Description)
+                </div>
+            </div>
+            <div class="field is-grouped is-grouped-centered">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    <p class="control">
+                        <input type="submit" value="Delete" class="button is-link" />
+                    </p>
+                }
+            </div>           
+        </div>
+    </div>
 </div>
