--- a/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Index.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Beers1/Index.cshtml
@@ -35,7 +35,7 @@
     <div class="column is-4">
         @foreach (var item in Model)
         {
-            <div class="card">
+            <div class="card top-bot-space-small">
                 <header class="card-header">
                     <p class="card-header-title">
                         @Html.DisplayFor(modelItem => item.Beer_Name)
