--- a/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Index.cshtml
+++ b/Brewery-Tracker/Brewery-Tracker/Views/Breweries1/Index.cshtml
@@ -31,7 +31,7 @@
     <div class="column is-4">
         @foreach (var item in Model)
         {
-            <div class="card">
+            <div class="card top-bot-space-small">
                 <header class="card-header">
                     <p class="card-header-title">
                         @Html.DisplayFor(modelItem => item.Brewery_Name)
